font rendering solution - independent src

--- a/product-single.html
+++ b/product-single.html
@@ -301,7 +301,7 @@
                 <div class="col column full-width-bg " style="background-image: url(assets/products/Sol_Landscape.png);">
                     <div class="card card-center">
                         <div class="card-content">
-                            <h1>Sòl<br>BATH<br>STOOL</h1>
+                            <h1>S<span>&Ograve;</span>l<br>BATH<br>STOOL</h1>
                             <h2 class="subtitle">Bathware Accessories</h2>
                         </div>
                     </div>
