Refactor CSS styles for buttons, sections, and layout; add new classes for improved structure and responsiveness

--- a/customisation.html
+++ b/customisation.html
@@ -307,7 +307,7 @@
 
 <!-- section -->
 
-<section class="half_panel-img_padding secondary_bg">
+<section class="half_panel-img_padding journey secondary_bg">
     <div class="row ">
 
         <div class="col column">
@@ -343,7 +343,7 @@
 
 <!-- section -->
 
-<section class="half_panel-img_padding">
+<section class="half_panel-img_padding expression">
     <div class="row ">
 
         <div class="col column">
@@ -372,11 +372,14 @@
 
 <!-- section -->
 
-<section class="full-width-img"><div class="row">
-    <div class="column">
-        <div class="img_wrap"><img src="assets/customisation/Masterpiece.jpg" alt="fullwidth image">        </img></div>
+<section class="full-width-img masterpiece">
+    <div class="row">
+        <div class="column">
+            <div class="img_wrap"><img src="assets/customisation/the_masterpiece.jpg" alt="fullwidth image">        </img></div>
+        </div>
     </div>
-</div></section>
+</section> 
+
 
 <!-- /section -->
 
