--- a/style.html
+++ b/style.html
@@ -115,7 +115,7 @@
                                                 <li class="submenu-item"><a class="submenu-link" href="/collection-single.html#Sol">Sol</a></li>
                                                 <li class="submenu-item"><a class="submenu-link" href="/collection-single.html#Zen">Zen</a></li>
                                                 <li class="submenu-item"><a class="submenu-link" href="/collection-single.html#Tulle">Tulle</a></li>
-                                                <li class="submenu-item"><a class="submenu-link" href="/collection-single.html#Terra">Terra</a></li>
+                                                <li class="submenu-item more-item"><a class="submenu-link more-link" href="/collection-archive.html">More</a></li>
                                             </ul>
                                         </div>
                                         <div class="submenu_col">
